Bug 127288 - AX: [ATK] Accessible names missing for imagemap images and links
Summary: AX: [ATK] Accessible names missing for imagemap images and links
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Accessibility (show other bugs)
Version: 528+ (Nightly build)
Hardware: All Linux
: P2 Normal
Assignee: Joanmarie Diggs
URL:
Keywords: InRadar
Depends on:
Blocks: 25531
  Show dependency treegraph
 
Reported: 2014-01-20 05:10 PST by Joanmarie Diggs
Modified: 2014-11-22 10:18 PST (History)
4 users (show)

See Also:


Attachments
accessible-event listener (325 bytes, text/x-python)
2014-01-20 05:10 PST, Joanmarie Diggs
no flags Details
test case (473 bytes, text/html)
2014-01-20 05:11 PST, Joanmarie Diggs
no flags Details
Patch (17.21 KB, patch)
2014-11-20 13:35 PST, Joanmarie Diggs
no flags Details | Formatted Diff | Diff
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion (515.29 KB, application/zip)
2014-11-20 14:22 PST, Build Bot
no flags Details
Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2 (523.29 KB, application/zip)
2014-11-20 14:45 PST, Build Bot
no flags Details
Patch (20.52 KB, patch)
2014-11-20 14:50 PST, Joanmarie Diggs
no flags Details | Formatted Diff | Diff
Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2 (558.35 KB, application/zip)
2014-11-20 15:26 PST, Build Bot
no flags Details
Patch (19.44 KB, patch)
2014-11-20 15:27 PST, Joanmarie Diggs
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Joanmarie Diggs 2014-01-20 05:10:11 PST
Created attachment 221651 [details]
accessible-event listener

Steps to reproduce:
1. Launch the attached accessible-event listener in a terminal.
2. (Re)load the attached test case.

Expected results: The tree of accessible objects printed in the terminal would have accessible names. For comparison, here's what we get from Gecko:

-> [document frame | file:///home/jd/imagemap.html]
    -> [paragraph | ]
    -> [image | Planets]
        -> [link | Sun]
        -> [link | Mercury]
        -> [link | Venus]

Actual results: Names are missing for the imagemap images and links:

-> [document frame | ]
    -> [paragraph | ]
    -> [panel | ]
        -> [image | ]
            -> [link | ]
            -> [link | ]
            -> [link | ]
Comment 1 Joanmarie Diggs 2014-01-20 05:11:05 PST
Created attachment 221652 [details]
test case
Comment 2 Radar WebKit Bug Importer 2014-01-20 05:28:59 PST
<rdar://problem/15858049>
Comment 3 Joanmarie Diggs 2014-11-20 13:35:52 PST
Created attachment 241974 [details]
Patch
Comment 4 Joanmarie Diggs 2014-11-20 13:39:28 PST
(In reply to comment #3)
> Created attachment 241974 [details]
> Patch

Turns out the alt text is there, but as the description. As per http://rawgit.com/w3c/aria/master/accname-aam/accname-aam.html#accessible-name-and-description-mapping, that's correct for the Mac (text not exposed visually) but not for ATK.

I didn't bother removing it from the description for ATK. Its presence doesn't hurt anything, and there may be cases where a different description is provided and should be exposed.
Comment 5 Build Bot 2014-11-20 14:22:10 PST
Comment on attachment 241974 [details]
Patch

Attachment 241974 [details] did not pass mac-ews (mac):
Output: http://webkit-queues.appspot.com/results/5343041212645376

New failing tests:
accessibility/roles-exposed.html
Comment 6 Build Bot 2014-11-20 14:22:14 PST
Created attachment 241981 [details]
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion

The attached test failures were seen while running run-webkit-tests on the mac-ews.
Bot: webkit-ews-01  Port: mac-mountainlion  Platform: Mac OS X 10.8.5
Comment 7 Joanmarie Diggs 2014-11-20 14:38:00 PST
It seems like the failing test is failing because it is being run using the modified test, but without the modified expectations I included in the patch. (??)

FAILURE:

--- /Volumes/Data/EWS/WebKit/WebKitBuild/Release/layout-test-results/accessibility/roles-exposed-expected.txt
+++ /Volumes/Data/EWS/WebKit/WebKitBuild/Release/layout-test-results/accessibility/roles-exposed-actual.txt
@@ -199,6 +199,16 @@
       AXSubrole: 
       AXRoleDescription: image
       
+img[usemap][alt='X']
+      AXRole: AXImageMap
+      AXSubrole: 
+      AXRoleDescription: image map
+      
+img[usemap]:not([alt])
+      AXRole: 
+      AXSubrole: 
+      AXRoleDescription: 
+      
 input[type='button']
       AXRole: AXButton
       AXSubrole: 
@@ -319,6 +329,16 @@
       AXSubrole: 
       AXRoleDescription: 
       
+map
+      AXRole: 
+      AXSubrole: 
+      AXRoleDescription: 
+      
+area
+      AXRole: 
+      AXSubrole: 
+      AXRoleDescription: 
+      
 mark
       AXRole: 
       AXSubrole: 

========================


diff --git a/LayoutTests/platform/mac/accessibility/roles-exposed-expected.txt b/LayoutTests/platform/mac/accessibility/roles-exposed-expected.txt
index 075499890e9c97b78580d2e351ecc2c07916f471..7d321c57d5347cc820bf5cf7222423b201bfb896 100644
--- a/LayoutTests/platform/mac/accessibility/roles-exposed-expected.txt
+++ b/LayoutTests/platform/mac/accessibility/roles-exposed-expected.txt
@@ -199,6 +199,16 @@ img[alt='X']
       AXSubrole: 
       AXRoleDescription: image
       
+img[usemap][alt='X']
+      AXRole: AXImageMap
+      AXSubrole: 
+      AXRoleDescription: image map
+      
+img[usemap]:not([alt])
+      AXRole: 
+      AXSubrole: 
+      AXRoleDescription: 
+      
 input[type='button']
       AXRole: AXButton
       AXSubrole: 
@@ -319,6 +329,16 @@ ins
       AXSubrole: 
       AXRoleDescription: 
       
+map
+      AXRole: 
+      AXSubrole: 
+      AXRoleDescription: 
+      
+area
+      AXRole: 
+      AXSubrole: 
+      AXRoleDescription: 
+      
 mark
       AXRole: 
       AXSubrole:
Comment 8 Build Bot 2014-11-20 14:45:00 PST
Comment on attachment 241974 [details]
Patch

Attachment 241974 [details] did not pass mac-wk2-ews (mac-wk2):
Output: http://webkit-queues.appspot.com/results/6712059018346496

New failing tests:
accessibility/roles-exposed.html
Comment 9 Build Bot 2014-11-20 14:45:04 PST
Created attachment 241985 [details]
Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2

The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews.
Bot: webkit-ews-13  Port: mac-mountainlion-wk2  Platform: Mac OS X 10.8.5
Comment 10 Joanmarie Diggs 2014-11-20 14:50:38 PST
Created attachment 241988 [details]
Patch
Comment 11 Build Bot 2014-11-20 15:26:09 PST
Comment on attachment 241988 [details]
Patch

Attachment 241988 [details] did not pass mac-wk2-ews (mac-wk2):
Output: http://webkit-queues.appspot.com/results/5373269192474624

New failing tests:
accessibility/roles-exposed.html
Comment 12 Build Bot 2014-11-20 15:26:15 PST
Created attachment 241993 [details]
Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2

The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews.
Bot: webkit-ews-13  Port: mac-mountainlion-wk2  Platform: Mac OS X 10.8.5
Comment 13 Joanmarie Diggs 2014-11-20 15:27:10 PST
Created attachment 241994 [details]
Patch
Comment 14 Joanmarie Diggs 2014-11-21 08:38:21 PST
Mario or Chris, got time for a review? It's another case of very little code and mostly tests (all of which now seem to pass on all versions of the Mac).
Comment 15 WebKit Commit Bot 2014-11-22 10:17:59 PST
Comment on attachment 241994 [details]
Patch

Clearing flags on attachment: 241994

Committed r176505: <http://trac.webkit.org/changeset/176505>
Comment 16 WebKit Commit Bot 2014-11-22 10:18:05 PST
All reviewed patches have been landed.  Closing bug.