AX: [ATK] Accessible names missing for imagemap images and links https://bugs.webkit.org/show_bug.cgi?id=127288

Source/WebCore:

Reviewed by Chris Fleizach.

Return the alt text, if present, for the accessible name for image maps
and image map links for ATK. Also expose the accessible element with
ATK_ROLE_IMAGE_MAP instead of ATK_ROLE_IMAGE.

Test: accessibility/image-with-alt-and-map.html

* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::isImageMap):
* accessibility/atk/WebKitAccessibleWrapperAtk.cpp:
(webkitAccessibleGetName):
(atkRole):

LayoutTests:

New and updated tests to reflect the expected role, accessible hierarchy,
and exposure of the alternative text for each platform.

Reviewed by Chris Fleizach.

* accessibility/image-with-alt-and-map.html: Added.
* accessibility/roles-exposed.html: Added some more elements to the test.
* platform/efl/accessibility/image-map1-expected.txt: Added.
* platform/efl/accessibility/image-map2-expected.txt: Updated to reflect fix.
* platform/efl/accessibility/image-with-alt-and-map-expected.txt: Added.
* platform/efl/accessibility/roles-exposed-expected.txt: Updated for added elements.
* platform/gtk/accessibility/image-map1-expected.txt: Added.
* platform/gtk/accessibility/image-map2-expected.txt: Updated to reflect fix.
* platform/gtk/accessibility/image-with-alt-and-map-expected.txt: Added.
* platform/gtk/accessibility/roles-exposed-expected.txt: Updated for added elements.
* platform/mac/accessibility/image-with-alt-and-map-expected.txt: Added.
* platform/mac/accessibility/roles-exposed-expected.txt: Updated for added elements.
* platform/mac-mavericks/accessibility/roles-exposed-expected.txt: Updated for added elements.
* platform/mac-mountainlion/accessibility/roles-exposed-expected.txt: Updated for added elements.


Canonical link: https://commits.webkit.org/156885@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176505 268f45cc-cd09-0410-ab3c-d52691b4dbfc